--- a/MyDietSchedule/MyDietSchedule.csproj
+++ b/MyDietSchedule/MyDietSchedule.csproj
@@ -18,8 +18,14 @@
     <Folder Include="Utils\" />
     <Folder Include="Views\" />
     <Folder Include="Custom Form Elements\" />
+    <Folder Include="Views\Users\" />
+    <Folder Include="Effects\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Controls\NoInternetDisplay.cs" />
+    <Compile Remove="Custom Form Elements\BackgroundEntryEffect.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="Assets\styles.css" />
   </ItemGroup>
 </Project>
