--- a/MyDietSchedule.iOS/MyDietSchedule.iOS.csproj
+++ b/MyDietSchedule.iOS/MyDietSchedule.iOS.csproj
@@ -188,5 +188,7 @@
     <BundleResource Include="Resources\password.png" />
     <BundleResource Include="Resources\user.png" />
     <BundleResource Include="Resources\edit.png" />
+    <BundleResource Include="Resources\ruler.png" />
+    <BundleResource Include="Resources\newUser.png" />
   </ItemGroup>
 </Project>
