--- a/MyDietSchedule/MyDietSchedule.csproj
+++ b/MyDietSchedule/MyDietSchedule.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="sqlite-net-pcl" Version="1.4.118" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.637273" />
+    <PackageReference Include="LiveXAML" Version="2.1.36" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -28,6 +29,8 @@
     <Compile Remove="Custom Form Elements\BackgroundEntryEffect.cs" />
     <Compile Remove="Utils\Resource Dictionaries\FormValidations.cs" />
     <Compile Remove="Utils\Resource Dictionaries\FormValidation.xaml.cs" />
+    <Compile Remove="Custom Form Elements\Converters\StringToNullableIntConverter.cs" />
+    <Compile Remove="Data\Controllers\MeasurementDataBaseController.xaml.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Remove="Assets\styles.css" />
